tests/lang/compile_fail/protocol_on_generic_body_mismatch.kojs
protocol Show
  fn show(self) -> String
end

struct Box<T>
  value: T
end

impl Show for Box<T>
  fn show(self) -> String
    42
  end
end

b = Box{value: 1}
b.show().print()
